# etsy-stream-pack-helper

./: .env.example  .gitignore  ETSY_SETUP.md  README.md  pyproject.toml  test_etsy_connectivity.py
docs/: index.md
packs/e2e_pack/: config.yaml
packs/e2e_pack/05_etsy/qa/: round02.md
packs/e2e_pack/06_digital_delivery/: README.txt
packs/e2e_pack/qa/: round01.md  round03.md  workflow_state.json
packs/sample_pack/: config.yaml
packs/sample_pack/qa/: round01.md
prompts/: art_director_system.txt  critic_system.txt  prompt_engineer_system.txt
scripts/: setup_etsy_oauth.py
src/stream_pack_builder/: __init__.py  cli.py  config.py  gemini_client.py  generator.py  postprocess.py  test_critic.py  utils.py
src/stream_pack_builder/agents/: __init__.py  art_director.py  critic.py  pm.py  prompt_engineer.py
src/stream_pack_builder/automation/: qa_log.py
src/stream_pack_builder/etsy/: __init__.py  api_client.py  digital_delivery.py  listing_metadata.py  listing_photos.py  readme_generator.py  uploader.py
src/stream_pack_builder/multi_agent/: __init__.py  orchestrator.py  rubric.py  state.py
